-------------------------------------------------------------------------------
Changes in version 1.028


Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.027

- Fixed numberic export glitch in vpwentry_export.

- Fixed dependancies to let "make -j" work properly.

- Added some pre-computed .lib files (such as socket.lib).

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.026

- Fixed negative indexing bugs in str_findprev* and ibuf_getstr_crlf
  functions.  Thanks Gerrit Pape.

- Added the capability to bg-installer to optionally run commands based
  on the existance of the source (or another) file.

- Fixed bg-installer to not create directories in "dry-run" mode.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.025

- Added the capability to bg-installer to handle multiple destinations
  within the same source list.

- Renamed the "setmode" function in bg-installer that was causing
  compile problems on *BSD systems.

- Added a sysdep for struct timespec and clock_gettime, which are
  defined if not present.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.024

- Fixed (again) glob patterns to allow both "!" (like modern glob) or
  "^" (like existing shells) for negating character sets.

Development of this version has been sponsored by FutureQuest, Inc.