@@ -1,1 +1,1 @@
-: crypt.lib m.lib net.lib rt.lib s.lib shadow.lib socket.lib
+: crypt.lib dl.lib m.lib net.lib rt.lib s.lib shadow.lib socket.lib
