@@ -1,6 +1,7 @@
 -------------------------------------------------------------------------------
 Changes in version 1.028
 
+- Added sysdep for dynamic linker functions (dlopen etc).
 
 Development of this version has been sponsored by FutureQuest, Inc.
 ossi@FutureQuest.net  http://www.FutureQuest.net/
